--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,53 @@
+*{
+    margin:0;
+    padding: 0;
+    box-sizing: border-box;
+}
+body {
+    font-family: sans-serif;
+    background-color: navy;
+    color: white;
+    text-align: center;
+}
+
+.input {
+    text-align: center;
+}
+
+input.button{
+    height: 30px;
+    width: 100px;
+    font-size: 1rem;
+    border: none;
+    background:orange;
+    margin-left: 1%;
+    border-radius: 2px;
+}
+
+input.button:hover{
+    background: gray;
+}
+input.inputValue{
+    height: 30px;
+    width: 300px;
+    background: #e7e7e7;
+    font-size: 1rem;
+    border: none;
+    border-radius: 2px;
+}
+
+.display{
+    text-align: center;
+}
+
+h1{
+    padding-top: 5%;
+    padding-bottom: 5%;
+    text-align: center;
+}
+  
+  button {
+    margin: auto;
+    margin-top: 5%;
+  }
 
