--- a/styles.css
+++ b/styles.css
@@ -51,3 +51,15 @@ h1{
     margin-top: 5%;
   }
 
+  h2{
+    padding-top: 5%;
+    padding-bottom: 5%;
+    text-align: center;
+}
+
+h3{
+    padding-top: 30%;
+    padding-bottom: 5%;
+    text-align: center;
+}
+
